# newsletter-ai-agent

./: LICENSE  README.md  get_date.py  get_email_content.py  main.py  pyproject.toml  send_email.py
.github/workflows/: cml.yaml
newsletter_agent/agent/: agent_execution.py  agno_web_search.py  openai_sdk_web_search.py  output_formating.py  prompt.py  prompts.py  web_search.py
newsletter_agent/utilis/: get_date.py  get_email_content.py  send_email.py
tests/: test_package_import.py  test_send_email.py
