[tool.poetry]
name = "newsletter-ai-agent"
version = "0.1.0"
description = ""
authors = ["Yannick Flores <yannick.flores1992@gmail.com>"]
readme = "README.md"
packages = [{include = "agentic_ai_workshop"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "*"
openai-agents="*"
duckduckgo-search = "7.5.0"
yfinance = "0.2.54"
lancedb = "0.20.0"
tantivy = "0.22.0"
pypdf = "5.3.1"
requests = "2.32.3"
exa-py = "1.8.9"
newspaper4k = "0.9.3.1"
lxml_html_clean = "0.4.1"
sqlalchemy = "2.0.38"
agno= "*"
matplotlib = "3.10.1"
seaborn = "0.13.2"
PyGithub ="2.6.1"
ipykernel="6.29.5"
gradio = "*"
geopy = "*"
boto3 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
