[tool.poetry]
name = "newsletter-ai-agent"
version = "0.1.0"
description = ""
authors = ["Yannick Flores <yannick.flores1992@gmail.com>"]
readme = "README.md"
packages = [{include = "agentic_ai_workshop"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "*"
openai-agents="*"
agno= "*"
pytest = "*"
secure-smtplib = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
